--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,10 +1,58 @@
-<h1 class="heading -large">{{ home.title | ExampleFilter }}</h1>
+<header class="container-fluid">
+  <div class="row">
+    <div class="logo col-xs-10">
+      inter<span class="text-highlighted">face</span>
+    </div>
+    <div class="col-xs-2">
+      <img src="" style="width:30px; height: 30px; background-color: lightgrey">
+      Clementine Bauch
+      <span> + </span>
+    </div>
+  </div>
+</header>
 
-<h3 class="heading -medium">Here is a fancy number served up courtesy of Angular: <span class="number-example">{{ home.number }}</span></h3>
-
-<img src="images/angular.png" height="100" />
-<img src="images/gulp.png" height="100" />
-<img src="images/browserify.png" height="100" />
-
-<hr/>
-<div example-directive title="WOW!" click-message="You clicked me!">Directive is not loaded.</div>
+<section class="container-fluid">
+  <div class="row">
+    <div class="contacts col-xs-3">
+      <div class="contact">
+        <img src="" style="width: 70px; height: 70px; background-color: lightgrey">
+        <div>
+          <p>Name Surname</p>
+          <p>lorem</p>
+          <p><img src="">lorem ipsum@s.com</p>
+        </div>
+        <div class="more"> > </div>
+      </div>
+      <div class="contact">
+        <img src="" style="width: 70px; height: 70px; background-color: lightgrey">
+        <div>
+          <p>Name Surname</p>
+          <p>lorem</p>
+          <p><img src="">lorem ipsum@s.com</p>
+        </div>
+        <div class="more"> > </div>
+      </div>
+      <div class="contact">
+        <img src="" style="width: 70px; height: 70px; background-color: lightgrey">
+        <div>
+          <p>Name Surname</p>
+          <p>lorem</p>
+          <p><img src="">lorem ipsum@s.com</p>
+        </div>
+        <div class="more"> > </div>
+      </div>
+    </div>
+    <div class="col-xs-9">
+      main content
+      <div class="row">
+        <div class="col-xs-12">
+          header
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-8">LATEST POSTS</div>
+        <div class="col-xs-4">PHOTO ALBUM</div>
+      </div>
+    </div>
+  </div>
+</section>
