--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,9 +1,13 @@
+@import '../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap';
+
 @import 'vars';
-@import 'typography';
+@import 'header';
+@import 'maincontent';
+
+* {
+  outline: 1px solid black;
+}
 
 body {
-  font-family: Helvetica, sans-serif;
-  color: $font-color--dark;
-  background-color: $background--light;
-  padding: $half-space;
+  font-family: 'Open Sans', sans-serif;
 }
