--- a/app/views/home.html
+++ b/app/views/home.html
@@ -17,36 +17,38 @@
       <div class="contact">
         <img src="" style="width: 70px; height: 70px; background-color: lightgrey">
         <div>
-          <p>Name Surname</p>
-          <p>lorem</p>
-          <p><img src="">lorem ipsum@s.com</p>
+          <p>Leanne Graham</p>
+          <p>Bret</p>
+          <p><img src="">Sincere@april.biz</p>
         </div>
         <div class="more"> > </div>
       </div>
       <div class="contact">
         <img src="" style="width: 70px; height: 70px; background-color: lightgrey">
         <div>
-          <p>Name Surname</p>
-          <p>lorem</p>
-          <p><img src="">lorem ipsum@s.com</p>
+          <p>Leanne Graham</p>
+          <p>Bret</p>
+          <p><img src="">Sincere@april.biz</p>
         </div>
         <div class="more"> > </div>
       </div>
       <div class="contact">
         <img src="" style="width: 70px; height: 70px; background-color: lightgrey">
         <div>
-          <p>Name Surname</p>
-          <p>lorem</p>
-          <p><img src="">lorem ipsum@s.com</p>
+          <p>Leanne Graham</p>
+          <p>Bret</p>
+          <p><img src="">Sincere@april.biz</p>
         </div>
         <div class="more"> > </div>
       </div>
     </div>
     <div class="col-xs-9">
-      main content
       <div class="row">
-        <div class="col-xs-12">
-          header
+        <div class="vcard col-xs-12">
+          <img src="" style="width: 155px; height: 140px; background-color: lightgrey">
+          <h3>Leanne Graham</h3>
+          <p>hildegard.org</p>
+          <small>Romanquera-Crona / Multi-layered client-server neural-net</small>
         </div>
       </div>
       <div class="row">
