--- a/app/styles/_maincontent.scss
+++ b/app/styles/_maincontent.scss
@@ -22,3 +22,14 @@
     display: inline-block;
   }
 }
+
+.vcard {
+  background-color: $mainColor;
+  height: 200px;
+  padding-top: 80px;
+  color: #FFF;
+  img {
+    float: left;
+    margin: 20px 25px 0 50px;
+  }
+}
