--- a/app/views/home.html
+++ b/app/views/home.html
@@ -51,9 +51,20 @@
           <small>Romanquera-Crona / Multi-layered client-server neural-net</small>
         </div>
       </div>
-      <div class="row">
-        <div class="col-xs-8">LATEST POSTS</div>
-        <div class="col-xs-4">PHOTO ALBUM</div>
+      <div class="contact-details row">
+        <div class="col-xs-8">
+          <div class="details-title">
+            <h5>Latest Posts</h5>
+            <hr>
+          </div>
+          <div class="post"></div>
+        </div>
+        <div class="col-xs-4">
+          <div class="details-title">
+            <h5>Photo Album</h5>
+            <hr>
+          </div>
+        </div>
       </div>
     </div>
   </div>
