Posts with comments

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -45,21 +45,52 @@
     <div class="col-xs-9">
       <div class="row">
         <div class="vcard col-xs-12">
-          <img src="" style="width: 155px; height: 140px; background-color: lightgrey">
+          <img src="" style="width: 155px; height: 140px; background-color: grey">
           <h3>Leanne Graham</h3>
           <p>hildegard.org</p>
           <small>Romanquera-Crona / Multi-layered client-server neural-net</small>
         </div>
       </div>
       <div class="contact-details row">
-        <div class="col-xs-8">
+        <div class="col-xs-7">
           <div class="details-title">
             <h5>Latest Posts</h5>
             <hr>
           </div>
-          <div class="post"></div>
+          <div class="post">
+            <h4 class="title">
+              sunt aut facere repellat provident occaecati excepturi optio reprehenderit
+            </h4>
+            <p class="body">
+              quia et suscipit\nsuscipit recusandae consequuntur expedita et cum\nreprehenderit molestiae ut ut quas totam\nnostrum rerum est autem sunt rem eveniet architecto
+            </p>
+            <div class="clearfix">
+              <div class="comments-number">3 comments</div>
+              <div class="show-more">show all <span> > </span></div>
+            </div>
+            <div class="comments">
+              <div class="comment">
+                <p>
+                  laudantium enim quasi est quidem magnam voluptate ipsam eos\ntempora quo necessitatibus\ndolor quam autem quasi\nreiciendis et nam sapiente accusantium
+                </p>
+                <span>emailicon</span><span>Eliseo@gardner.biz</span>
+              </div>
+              <div class="comment">
+                <p>
+                  laudantium enim quasi est quidem magnam voluptate ipsam eos\ntempora quo necessitatibus\ndolor quam autem quasi\nreiciendis et nam sapiente accusantium
+                </p>
+                <span>emailicon</span><span>Eliseo@gardner.biz</span>
+              </div>
+              <div class="comment">
+                <p>
+                  laudantium enim quasi est quidem magnam voluptate ipsam eos\ntempora quo necessitatibus\ndolor quam autem quasi\nreiciendis et nam sapiente accusantium
+                </p>
+                <span>emailicon</span><span>Eliseo@gardner.biz</span>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="col-xs-4">
+        <div class="col-xs-5">
           <div class="details-title">
             <h5>Photo Album</h5>
             <hr>
