--- a/app/styles/_maincontent.scss
+++ b/app/styles/_maincontent.scss
@@ -36,6 +36,7 @@
 
 .contact-details {
   padding-top: 50px;
+  background-color: lightgrey;
 }
 
 .details-title {
@@ -49,5 +50,34 @@
     text-align: left;
     margin-left: 0;
     margin-top: -5px;
+  }
+}
+
+.post {
+  background-color: #FFF;
+  padding: 15px;
+  .title {
+    border-left: 5px solid $mainHighlighted;
+    padding-left: 10px;
+    margin-left: -15px;
+  }
+  .comments-number {
+    float: left;
+  }
+  .show-more {
+    float: right;
+    span {
+      color: $mainHighlighted;
+      font-weight: 800;
+    }
+  }
+}
+
+.comments {
+  padding: 15px;
+  .comment {
+    background-color: lightgrey;
+    margin-bottom: 5px;
+    padding: 15px;
   }
 }
