Added ng-repeat to repeatable elements

--- a/app/styles/_maincontent.scss
+++ b/app/styles/_maincontent.scss
@@ -56,6 +56,7 @@
 .post {
   background-color: #FFF;
   padding: 15px;
+  margin-bottom: 15px;
   .title {
     border-left: 5px solid $mainHighlighted;
     padding-left: 10px;
