--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -4,9 +4,9 @@
 @import 'header';
 @import 'maincontent';
 
-* {
-  outline: 1px solid black;
-}
+// * {
+//   outline: 1px solid black;
+// }
 
 body {
   font-family: 'Open Sans', sans-serif;
