Added profile details

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -7,6 +7,16 @@
       <img src="" style="width:30px; height: 30px; background-color: lightgrey">
       Clementine Bauch
       <span> + </span>
+      <div class="profile-details">
+        <p>Samantha</p>
+        <div>
+          <p>Douglas Extension</p>
+          <p>Suite 847</p>
+          <p>McKenziehaven</p>
+          <p>6852556325</p>
+        </div>
+        <div>Edit</div>
+      </div>
     </div>
   </div>
 </header>
