--- a/app/styles/_header.scss
+++ b/app/styles/_header.scss
@@ -20,3 +20,12 @@ header {
 .text-highlighted {
   color: $mainHighlighted;
 }
+
+.profile-details {
+  background-color: $mainHighlighted;
+  color: #000;
+  z-index: 10;
+  position: absolute;
+  top: 43px;
+  width: 100%;
+}
