--- a/app/views/home.html
+++ b/app/views/home.html
@@ -3,11 +3,11 @@
     <div class="logo col-xs-10">
       inter<span class="text-highlighted">face</span>
     </div>
-    <div class="col-xs-2">
+    <div class="profile col-xs-2">
       <img src="" style="width:30px; height: 30px; background-color: lightgrey">
       Clementine Bauch
       <span> + </span>
-      <div class="profile-details">
+      <div class="details">
         <p>Samantha</p>
         <div>
           <p>Douglas Extension</p>
@@ -36,16 +36,16 @@
     </div>
     <div class="col-xs-9">
       <div class="row">
-        <div class="vcard col-xs-12">
+        <div class="user col-xs-12">
           <img src="" style="width: 155px; height: 140px; background-color: grey">
           <h3>Leanne Graham</h3>
           <p>hildegard.org</p>
           <small>Romanquera-Crona / Multi-layered client-server neural-net</small>
         </div>
       </div>
-      <div class="contact-details row">
+      <div class="user-details row">
         <div class="col-xs-7">
-          <div class="details-title">
+          <div class="title">
             <h5>Latest Posts</h5>
             <hr>
           </div>
@@ -58,7 +58,7 @@
             </p>
             <div class="clearfix">
               <div class="comments-number">3 comments</div>
-              <div class="show-more">show all <span> > </span></div>
+              <div class="more">show all <span> > </span></div>
             </div>
             <div class="comments">
               <div ng-repeat="i in [1, 2, 3]" class="comment">
@@ -71,10 +71,34 @@
           </div>
         </div>
         <div class="col-xs-5">
-          <div class="details-title">
+          <div class="title">
             <h5>Photo Album</h5>
             <hr>
           </div>
+          <div class="photo">
+            <div class="row">
+              <div class="col-xs-4">
+                <img src="" style="width: 70px; height: 70px; background-color: lightgrey">
+                <img src="" style="width: 70px; height: 70px; background-color: lightgrey">
+                <img src="" style="width: 70px; height: 70px; background-color: lightgrey">
+              </div>
+              <div class="col-xs-4">
+                <img src="" style="width: 70px; height: 70px; background-color: lightgrey">
+                <img src="" style="width: 70px; height: 70px; background-color: lightgrey">
+                <img src="" style="width: 70px; height: 70px; background-color: lightgrey">
+              </div>
+              <div class="col-xs-4">
+                <img src="" style="width: 70px; height: 70px; background-color: lightgrey">
+                <img src="" style="width: 70px; height: 70px; background-color: lightgrey">
+                <img src="" style="width: 70px; height: 70px; background-color: lightgrey">
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-xs-12">
+                <a class="btn btn-primary" href="">load more</a>
+              </div>
+            </div>
+          </div> <!-- .photo -->
         </div>
       </div>
     </div>
