--- a/app/styles/_vars.scss
+++ b/app/styles/_vars.scss
@@ -1,6 +1,8 @@
 // colors
 $mainColor: #4F4371;
 $colorHighlighted: #6FD3BA;
+$footerBgColor: #333333;
+$footerFontColor: #939393;
 
 
 /* for gradient: #695998 */
