--- a/app/styles/_vars.scss
+++ b/app/styles/_vars.scss
@@ -4,5 +4,6 @@ $colorHighlighted: #6FD3BA;
 $footerBgColor: #333333;
 $footerFontColor: #939393;
 
+$mainGrey: #F6F6F6;
 
 /* for gradient: #695998 */
