Added example ng-include and users controller

--- a/app/styles/_maincontent.scss
+++ b/app/styles/_maincontent.scss
@@ -117,8 +117,11 @@ footer {
   }
   a {
     color: $footerFontColor;
+    text-decoration: none;
     &:hover,
-    &:visited {
+    &:visited,
+    &:active,
+    &:link {
       color: $footerFontColor;
       text-decoration: none;
     }
