--- a/app/styles/_header.scss
+++ b/app/styles/_header.scss
@@ -18,7 +18,11 @@ header {
       position: absolute;
       top: 43px;
       width: 100%;
+      margin-left: -15px;
     }
+  }
+  .modal {
+    display: block;
   }
 }
 
