Http Service exercise

--- a/app/views/header.html
+++ b/app/views/header.html
@@ -27,7 +27,7 @@
               <button ng-click="vm.closeEditModal()" type="button" class="close">
                 <span>&times;</span>
               </button>
-              <h4 class="modal-title">Modal title</h4>
+              <h4 class="modal-title">Edit user info</h4>
             </div>
             <div class="modal-body">
               ...
