--- a/app/views/header.html
+++ b/app/views/header.html
@@ -3,24 +3,24 @@
     <div class="logo col-xs-10">
       inter<span class="text-highlighted">face</span>
     </div>
-    <div ng-controller="ProfileCtrl as vm" class="profile col-xs-2">
+    <div ng-controller="LoggedUserCtrl as vm" class="profile col-xs-2">
       <img src="" style="width:30px; height: 30px; background-color: lightgrey">
-      Clementine Bauch
+      {{vm.loggedUser.name}} {{vm.loggedUser.surname}}
       <span ng-click="vm.showDetails()"> click </span>
-      <div ng-show="vm.showDetailsState" class="details">
-        <p>Samantha</p>
+      <div ng-if="vm.detailsVisible" class="details">
+        <p>{{vm.loggedUser.nickname}}</p>
         <div>
-          <p>Douglas Extension</p>
-          <p>Suite 847</p>
-          <p>McKenziehaven</p>
-          <p>6852556325</p>
+          <p>{{vm.loggedUser.address.district}}</p>
+          <p>{{vm.loggedUser.address.street}}</p>
+          <p>{{vm.loggedUser.address.city}}</p>
+          <p>{{vm.loggedUser.telephone}}</p>
         </div>
         <div ng-click="vm.editProfile()">Edit</div>
       </div>
 
 
       <!-- Modal -->
-      <div ng-show="vm.showEditModal" class="modal">
+      <div ng-if="vm.showEditModal" class="modal">
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
