Added ChosenUserSrv and ChosenUserCtrl, binded data into view

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -2,7 +2,7 @@
 
 <section class="container-fluid">
   <div class="row">
-    <div ng-controller="UsersCtrl as vm" class="contacts col-xs-3">
+    <div ng-controller="ChosenUserCtrl as vm" class="contacts col-xs-3">
       <div ng-repeat="user in vm.users" class="contact">
         <img src="" style="width: 70px; height: 70px; background-color: lightgrey">
         <div>
