--- a/app/views/header.html
+++ b/app/views/header.html
@@ -20,7 +20,7 @@
 
 
       <!-- Modal -->
-      <div ng-if="vm.showEditModal" class="modal">
+      <!-- <div ng-if="vm.showEditModal" class="modal">
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
@@ -38,7 +38,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
 
 
     </div>
