--- a/app/views/home.html
+++ b/app/views/home.html
@@ -37,9 +37,10 @@
             </p>
             <div class="clearfix">
               <div class="comments-number">XXX comments</div>
-              <div ng-click="vm.getComments(post)" class="more">show all <span> > </span></div>
+              <div ng-if="!post.commentsVisible" ng-click="vm.toggleComments(post); vm.getComments(post)" class="more">show all <span> > </span></div>
+              <div ng-if="post.commentsVisible" ng-click="vm.toggleComments(post)" class="more">hide all <span> > </span></div>
             </div>
-            <div ng-repeat="comment in vm.comments[post.id]" class="comments">
+            <div ng-if="post.commentsVisible" ng-repeat="comment in vm.comments[post.id]" class="comments">
               <div class="comment">
                 <p>
                   {{comment.body}}
